sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: value liste
      if (liste[compteur]>liste[compteur]+1){
          ^AlgBubbleSort1:7: error: not found: type compteur
      if (liste[compteur]>liste[compteur]+1){
                ^AlgBubbleSort1:7: error: not found: value liste
      if (liste[compteur]>liste[compteur]+1){
                          ^AlgBubbleSort1:7: error: not found: type compteur
      if (liste[compteur]>liste[compteur]+1){
                                ^AlgBubbleSort1:11: error: not found: value detrompeur1
    detrompeur=detrompeur1
               ^AlgBubbleSort1:13: error: not found: value liste
	return liste
               ^AlgBubbleSort1:13: warning: enclosing method bubbleSort has result type Unit: return value discarded
	return liste
        ^